# mbot-scratch

./: .gitignore  .gitmodules
bridge/: CMakeLists.txt
bridge/include/: serial.hpp  server.hpp
bridge/src/: bridge.cpp  serial.cpp  server.cpp
python/: pair.py  scratch_bridge.py  serializer.py
